# ecommerce-fastapi-platform

./: .gitignore  README.md  pyproject.toml
ecommerce_project/: app.py
ecommerce_project/db/: __init__.py  database.py
ecommerce_project/db/tables/: __init__.py  cart_items.py  orders.py  products.py  users.py
ecommerce_project/models/: __init__.py  cart_items.py  orders.py  products.py  users.py
ecommerce_project/routers/: __init__.py  orders.py  products.py  users.py
scripts/: fill_some_samples_to_db.py  sample_api_calls.http
tests/: conftest.py  test_orders.py  test_products.py  test_users.py
